[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/player/PlayerRobot.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/pet/Pet.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/spawners/Spawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/hud/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sketches/game-bg.png" type="Texture" id=5]
[ext_resource path="res://scenes/maingame/MainGame.gd" type="Script" id=6]
[ext_resource path="res://scenes/enemies/Enemy.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/powerups/Energy.tscn" type="PackedScene" id=8]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_blend_mode = 0

[node name="MainGame" type="Node2D"]
script = ExtResource( 6 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HUD" parent="HUD" instance=ExtResource( 4 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 240, 160 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 5 )
centered = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Pet" parent="." instance=ExtResource( 2 )]
position = Vector2( 47.2325, 117.987 )

[node name="FruitSpawner" parent="." instance=ExtResource( 3 )]
spawn_cooldown = 2.0

[node name="Position2D" type="Position2D" parent="FruitSpawner/SpawnCenters" index="0"]
position = Vector2( -71.0468, 6.38673 )

[node name="Position2D2" type="Position2D" parent="FruitSpawner/SpawnCenters" index="1"]
position = Vector2( -87.6523, 106.871 )

[node name="Position2D3" type="Position2D" parent="FruitSpawner/SpawnCenters" index="2"]
position = Vector2( -49.7576, 228.645 )

[node name="Position2D4" type="Position2D" parent="FruitSpawner/SpawnCenters" index="3"]
position = Vector2( 118.427, 232.477 )

[node name="Position2D5" type="Position2D" parent="FruitSpawner/SpawnCenters" index="4"]
position = Vector2( 293.849, 198.415 )

[node name="Position2D6" type="Position2D" parent="FruitSpawner/SpawnCenters" index="5"]
position = Vector2( 281.927, 96.6527 )

[node name="Position2D7" type="Position2D" parent="FruitSpawner/SpawnCenters" index="6"]
position = Vector2( 277.669, -10.6446 )

[node name="Position2D8" type="Position2D" parent="FruitSpawner/SpawnCenters" index="7"]
position = Vector2( 104.376, -17.4571 )

[node name="EnemySpawner" parent="." instance=ExtResource( 3 )]
spawn_scene = ExtResource( 7 )
spawn_cooldown = 20.0

[node name="Position2D" type="Position2D" parent="EnemySpawner/SpawnCenters" index="0"]
position = Vector2( -230.828, -152.67 )

[node name="Position2D3" type="Position2D" parent="EnemySpawner/SpawnCenters" index="1"]
position = Vector2( -253.692, 309.669 )

[node name="Position2D4" type="Position2D" parent="EnemySpawner/SpawnCenters" index="2"]
position = Vector2( 393.704, 315.228 )

[node name="Position2D2" type="Position2D" parent="EnemySpawner/SpawnCenters" index="3"]
position = Vector2( 296.25, -157.232 )

[node name="EnergySpawner" parent="." instance=ExtResource( 3 )]
spawn_number = 3
spawn_scene = ExtResource( 8 )
spawn_cooldown = 1.0

[node name="Position2D" type="Position2D" parent="EnergySpawner/SpawnCenters" index="0"]
position = Vector2( -98.5474, -40.7363 )

[node name="Position2D2" type="Position2D" parent="EnergySpawner/SpawnCenters" index="1"]
position = Vector2( 189.895, -57.4573 )

[node name="Position2D3" type="Position2D" parent="EnergySpawner/SpawnCenters" index="2"]
position = Vector2( 57.9307, -91.2758 )

[node name="Position2D4" type="Position2D" parent="EnergySpawner/SpawnCenters" index="3"]
position = Vector2( 199.738, 218.867 )

[node name="Position2D5" type="Position2D" parent="EnergySpawner/SpawnCenters" index="4"]
position = Vector2( 30.1836, 256.578 )

[node name="Position2D6" type="Position2D" parent="EnergySpawner/SpawnCenters" index="5"]
position = Vector2( -145.394, 164.918 )

[node name="PlayerRobot" parent="." instance=ExtResource( 1 )]
position = Vector2( 104.228, 73.7896 )

[node name="Camera2D" type="Camera2D" parent="PlayerRobot"]
current = true
[connection signal="restart_game" from="HUD/HUD" to="." method="_on_HUD_restart_game"]
[connection signal="pet_died" from="Pet" to="HUD/HUD" method="_on_Pet_pet_died"]
[connection signal="pet_died" from="Pet" to="." method="_on_Pet_pet_died"]
[connection signal="spawned" from="EnemySpawner" to="." method="_on_EnemySpawner_spawned"]
[connection signal="update_energy" from="PlayerRobot" to="HUD/HUD" method="_on_PlayerRobot_update_energy"]

[editable path="FruitSpawner"]

[editable path="EnemySpawner"]

[editable path="EnergySpawner"]
